# book

./: .replit  app.py  database.db  pdf_extractor.py  pyproject.toml  replit.md
modules/: module1.md  module10.md  module11.md  module12.md  module13.md  module14.md  module15.md  module16.md  module18.md  module19.md  module2.md  module21.md  module22.md  module25.md  module26.md  module28.md  module3.md  module31.md  module32.md  module33.md  module36.md  module37.md  module38.md  module39.md  module4.md  module41.md  module44.md  module47.md  module49.md  module5.md  module52.md  module53.md  module55.md  module56.md  module59.md  module6.md  module61.md  module62.md  module64.md  module65.md  (+6 more)
static/css/: style.css
static/js/: app.js
templates/: home.html  layout.html  module.html
